@@ -3,12 +3,32 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<parent>
-		<groupId>gg.solarmc</groupId>
+		<groupId>gg.solarmc.paper</groupId>
 		<artifactId>solarpaper-parent</artifactId>
-		<version>1.1.7</version>
+		<version>1.2.1-SNAPSHOT</version>
 	</parent>
 
 	<artifactId>solarpaper-api</artifactId>
+
+	<build>
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-invoker-plugin</artifactId>
+				<!-- Configured mostly by solar-parent -->
+				<configuration>
+					<settingsFile>src/it/settings.xml</settingsFile>
+				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<configuration>
+					<argLine>--add-opens org.bukkit/org.bukkit.plugin.java=ALL-UNNAMED</argLine>
+				</configuration>
+			</plugin>
+		</plugins>
+	</build>
 
 	<dependencies>
 		<dependency>
@@ -63,7 +83,40 @@
 			<artifactId>loader-core</artifactId>
 			<version>${dataloader.version}</version>
 		</dependency>
+		<dependency>
+			<groupId>net.kyori</groupId>
+			<artifactId>adventure-api</artifactId>
+			<version>${adventure.version}</version>
+		</dependency>
+                <dependency>
+                        <groupId>net.kyori</groupId>
+                        <artifactId>adventure-nbt</artifactId>
+                        <version>${adventure.version}</version>
+                </dependency>
+		<dependency>
+			<groupId>net.kyori</groupId>
+			<artifactId>adventure-text-serializer-legacy</artifactId>
+			<version>${adventure.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>net.kyori</groupId>
+			<artifactId>adventure-text-serializer-gson</artifactId>
+			<version>${adventure.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>net.kyori</groupId>
+			<artifactId>adventure-text-serializer-plain</artifactId>
+			<version>${adventure.version}</version>
+		</dependency>
 		<!-- Testing -->
+		<dependency>
+			<groupId>org.junit.jupiter</groupId>
+			<artifactId>junit-jupiter-api</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.mockito</groupId>
+			<artifactId>mockito-junit-jupiter</artifactId>
+		</dependency>
 		<dependency>
 			<groupId>org.slf4j</groupId>
 			<artifactId>slf4j-simple</artifactId>
